Fixed Notify <-> NavBar z-index

--- a/less/navigation-bar.less
+++ b/less/navigation-bar.less
@@ -262,7 +262,7 @@
 .navigation-bar, .navbar {
     &.fixed-top, &.fixed-bottom {
         position: fixed;
-        z-index: 10000;
+        z-index: @zindexFixedNavbar;
         left: 0;
     }
 
